--- a/Website/index.html
+++ b/Website/index.html
@@ -68,8 +68,8 @@
             </div>
         </div>
     </section>
-    <script src="scripts/jquery-3.3.1.js"></script>
-    <script src="scripts/script.js"></script>
+    <!-- <script src="scripts/jquery-3.3.1.js"></script>
+    <script src="scripts/script.js"></script> -->
 
 </body>
 
