--- a/Website/nutrition.html
+++ b/Website/nutrition.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+        <script src="scripts/jquery-3.3.1.js"></script>
+        <script src="scripts/script.js"></script>
 
     <header>
         <div class="container">
@@ -79,10 +81,19 @@
                     </ol>
                 </p>
 
+                <form id = "tdee">
+                    <p>
+                        bodyweight
+                    </p>
+                    <input type="number" id = "bodyweight" placeholder="0">
+            
+                </form>
+                <p id = "result">
+            
+                </p>
             </div>
         </div>
     </section>
-
 </body>
 
 </html>
