--- a/Website/program.html
+++ b/Website/program.html
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="box">
                 <select id="choice">
-                    <option value="push">Push</option>
+                    <option selected = "selected" value="push">Push</option>
                     <option value="pull">Pull</option>
                     <option value="legs">Legs</option>
                     
@@ -130,73 +130,7 @@
                 </table>
 
             </div>
-            <!-- <div class="box">
-                <h2>Pull</h2>
-
-                <table id = "pull">
-                    <tr>
-                        <th>Exercise</th>
-                        <th>Sets</th>
-                        <th>Reps</th>
-                    </tr>
-                    <tr>
-                        <td>Deadlift</td>
-                        <td>3</td>
-                        <td>5</td>
-                    </tr>
-                    <tr>
-                        <td>Barbell Rows</td>
-                        <td>5</td>
-                        <td>5</td>
-                    </tr>
-                    <tr>
-                        <td>Pull ups</td>
-                        <td>4</td>
-                        <td>10</td>
-                    </tr>
-                    <tr>
-                        <td>Lat Pull downs</td>
-                        <td>4</td>
-                        <td>10</td>
-                    </tr>
-                    <tr>
-                        <td>Seated Row</td>
-                        <td>4</td>
-                        <td>10</td>
-                    </tr>
-                </table>
-
-            </div>
-            <div class="box">
-                <h2>Legs</h2>
-
-                <table id = "Legs">
-                    <tr>
-                        <th>Exercise</th>
-                        <th>Sets</th>
-                        <th>Reps</th>
-                    </tr>
-                    <tr>
-                        <td>Squat</td>
-                        <td>4</td>
-                        <td>6</td>
-                    </tr>
-                    <tr>
-                        <td>Sumo Deadlifts</td>
-                        <td>4</td>
-                        <td>5</td>
-                    </tr>
-                    <tr>
-                        <td>Leg Press</td>
-                        <td>6</td>
-                        <td>8</td>
-                    </tr>
-                    <tr>
-                        <td>Calf Raises</td>
-                        <td>5</td>
-                        <td>15</td>
-                    </tr>
-                </table> -->
+           
 
             </div>
 
