finished macro calculator

--- a/Website/program.html
+++ b/Website/program.html
@@ -41,6 +41,9 @@
     </pagetitle>
     <section id="boxes">
         <div class="container">
+            <div class = "box">
+               PUT 1RM CALCULATOR HERE
+            </div>
             <div class="box">
                 <select id="choice">
                     <option selected = "selected" value="push">Push</option>
@@ -130,11 +133,9 @@
                 </table>
 
             </div>
-           
-
-            </div>
 
         </div>
+
     </section>
     <script src="scripts/jquery-3.3.1.js"></script>
     <script src="scripts/script.js"></script>
