--- a/Website/about.html
+++ b/Website/about.html
@@ -4,9 +4,12 @@
 <head>
     <title>Gym Website</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/printSheet.css">
 </head>
 
 <body>
+    <script src="scripts/jquery-3.3.1.js"></script>
+    <!-- <script src="scripts/script.js"></script> -->
 
     <header>
         <div class="container">
@@ -47,9 +50,9 @@
                 <p> This website provides the users with a tool to teach them about powerlifting and nutrition. It provides a
                     3 day a week gym program as well as tips on how to structure your diet.</p>
                 <p>Some of the information for this website was sourced from
-                    <a href="www.stronglifts.com">Stronglifts.com</a>, 
-                    <a href="www.foodforfitness.co.uk">Food for fitness</a>, 
-                    <a href="www.self.com/story/heres-what-a-perfect-week-of-working-out-looks-like">Self.com</a>, 
+                    <a href="www.stronglifts.com">Stronglifts.com</a>,
+                    <a href="www.foodforfitness.co.uk">Food for fitness</a>,
+                    <a href="www.self.com/story/heres-what-a-perfect-week-of-working-out-looks-like">Self.com</a>,
                     <a href="https://kidshealth.org/en/teens/exercise-wise.html">Kids Health</a>.
                 </p>
             </div>
