--- a/Website/nutrition.html
+++ b/Website/nutrition.html
@@ -4,11 +4,13 @@
 <head>
     <title>Gym Website</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/printSheet.css">
+
 </head>
 
 <body>
-        <script src="scripts/jquery-3.3.1.js"></script>
-        <script src="scripts/script.js"></script>
+    <script src="scripts/jquery-3.3.1.js"></script>
+    <script src="scripts/calc.js"></script>
 
     <header>
         <div class="container">
@@ -56,7 +58,8 @@
 
                 <h3>Calculating Protein</h3>
                 <p>In general when deciding how much protein you should have a good basis is 1g of protein for every 1lbs of
-                    bodyweight</p>
+                    bodyweight
+                </p>
 
             </div>
             <div class="box">
@@ -71,40 +74,41 @@
 
                 <h3>Calculating Carbs</h3>
                 <p>To calculate Carbs is a bit more complicated. You must assign the remaining calories from your day to them.
-                    Carbs and protein both have roughly 4 calories per gram and fat has roughly 9 grams per gram.
-                    So to figure out your carbs you must:
+                    Carbs and protein both have roughly 4 calories per gram and fat has roughly 9 grams per gram. So to figure
+                    out your carbs you must:
                     <ol>
                         <li>Multiply your protein target by 4</li>
                         <li>Multiply your fat target by 9</li>
-                        <li>Add these together and subtract the sum from your total calories, giving you the number of calories you have remaining for carbs</li>
+                        <li>Add these together and subtract the sum from your total calories, giving you the number of calories
+                            you have remaining for carbs</li>
                         <li>Divide this by 4 to get the number of grams of carbs you should eat every day</li>
                     </ol>
                 </p>
 
             </div>
-            <div class = "box">
+            <div class="box">
                 <h3>
                     Macro Calculator
                 </h3>
-                <form id = "macros">
+                <form id="macros">
                     <p>
                         Please enter your bodyweight in lbs:
                     </p>
-                    <input type="number" id = "bodyweight" placeholder="0">
-         
+                    <input type="number" id="bodyweight" placeholder="0">
+
                 </form>
                 <p>
                     You should be consuming:
                 </p>
-                <p id = "protein">
+                <p id="protein">
                     0g of protein
                 </p>
-                <p id = "fat">
+                <p id="fat">
                     0g of fat
                 </p>
-                <p id = "carbs">
-                        0g of carbs
-                 </p>
+                <p id="carbs">
+                    0g of carbs
+                </p>
 
             </div>
         </div>
