--- a/Website/index.html
+++ b/Website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <!--API KEY AIzaSyDGx4h8zbw3J1ftVSRm6d7SbrYgnlTKMMg -->
+<!--API KEY AIzaSyDGx4h8zbw3J1ftVSRm6d7SbrYgnlTKMMg -->
+
 <head>
     <title>Gym Website</title>
     <link rel="stylesheet" href="./css/style.css">
@@ -8,7 +9,7 @@
 </head>
 
 <body>
-    
+
 
     <header>
         <div class="container">
@@ -44,6 +45,15 @@
     <section id="boxes">
         <div class="container">
             <div class="box">
+                <h3>Find your nearest gym</h3>
+                <div>
+                    <button id="geolocation-button" class="btn btn-success">Find my position</button>
+                </div>
+                <div id="map"></div>
+                <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGx4h8zbw3J1ftVSRm6d7SbrYgnlTKMMg&callback=enableButtons">
+                </script>
+            </div>
+            <div class="box">
 
                 <h3>Why should you work out?</h3>
                 <p>Exercise benefits every part of the body, including the mind. Exercising causes the body to make chemicals
@@ -68,20 +78,11 @@
                     aiming to improve your fitness and stay in shape.</p>
 
             </div>
-            <div class = "box">
-                <h3>Find your nearest gym</h3>
-                <div>
-                    <button id="geolocation-button"  class="btn btn-success">Find my position</button>
-                </div>
-                <div id = "map"></div>
-                <script async defer
-                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGx4h8zbw3J1ftVSRm6d7SbrYgnlTKMMg&callback=enableButtons">
-                </script>
-            </div>
+
         </div>
     </section>
     <script src="scripts/jquery-3.3.1.js"></script>
-<script src="scripts/geoloc.js"></script>
+    <script src="scripts/geoloc.js"></script>
 
 
 </body>
